annotations initial (yolov5)

--- a/H_Tatarstan2022_base.ipynb
+++ b/H_Tatarstan2022_base.ipynb
@@ -6,7 +6,7 @@
       "name": "H_Tatarstan2022_base.ipynb",
       "provenance": [],
       "mount_file_id": "1OAW0nvLpOeYFHt3anNM_w0zvwywHO7B1",
-      "authorship_tag": "ABX9TyMha7b4qEJhON93dAHdDhdI",
+      "authorship_tag": "ABX9TyPk6cgIKKe3dcZfdso6lhT5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,30 +29,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [
-        "from google.colab import drive\n",
-        "drive.mount('/content/drive')"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "_239YaVWtg5T",
-        "outputId": "3d25902e-2eb4-423b-d103-fb74f9d87b86"
-      },
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Mounted at /content/drive\n"
-          ]
-        }
-      ]
-    },
-    {
       "cell_type": "markdown",
       "source": [
         "### Импорт библиотек"
@@ -64,6 +40,7 @@
     {
       "cell_type": "code",
       "source": [
+        "import os\n",
         "import pandas as pd\n",
         "import numpy as np\n",
         "\n",
@@ -72,7 +49,7 @@
       "metadata": {
         "id": "ugHX4tp5uq5x"
       },
-      "execution_count": 8,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -86,14 +63,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 520
         },
         "id": "amt7BkzWmau-",
-        "outputId": "ffbb8e8e-362c-4dc2-a03d-ddaf40bd262d"
+        "outputId": "e1da27a5-5e98-4b6f-db95-45e77e476cfd"
       },
       "outputs": [
         {
@@ -136,7 +113,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-b3c0e96e-2db3-43d8-aab6-5a09dfc1e912\">\n",
+              "  <div id=\"df-189c336f-1fb4-4d20-adfc-699c7f7252ab\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -319,7 +296,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-b3c0e96e-2db3-43d8-aab6-5a09dfc1e912')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-189c336f-1fb4-4d20-adfc-699c7f7252ab')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -370,12 +347,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-b3c0e96e-2db3-43d8-aab6-5a09dfc1e912 button.colab-df-convert');\n",
+              "          document.querySelector('#df-189c336f-1fb4-4d20-adfc-699c7f7252ab button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-b3c0e96e-2db3-43d8-aab6-5a09dfc1e912');\n",
+              "          const element = document.querySelector('#df-189c336f-1fb4-4d20-adfc-699c7f7252ab');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -398,7 +375,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 2
         }
       ],
       "source": [
@@ -427,9 +404,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "bjDSxYfcwZdh",
-        "outputId": "366b8aba-9a45-4b40-b118-0033abe8e605"
+        "outputId": "0287861c-b136-4ee3-bcff-eb4f5518ec92"
       },
-      "execution_count": 15,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -450,7 +427,250 @@
       "metadata": {
         "id": "Q4x0mM01tzyX"
       },
-      "execution_count": 17,
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "len(os.listdir('data/train/images')), len(os.listdir('data/test/images'))"
+      ],
+      "metadata": {
+        "id": "e_zV-dEovfwk",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "7ae2bb70-0a53-4cdb-f994-e450bffe9106"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(2002, 855)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Распределение объектов в train\n",
+        "pd.Series([file_name.split('_')[-1]\n",
+        "           for file_name in os.listdir('data/train/labels')]).value_counts()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "R04T3vTge1IO",
+        "outputId": "f6f5eec0-62d0-4026-9409-5c188a81039a"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "head..txt        1741\n",
+              "human..txt       1740\n",
+              "car..txt         1647\n",
+              "face..txt         630\n",
+              "carplate..txt     246\n",
+              "dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Создадим обучающий датасет в формате yolo\n",
+        "# !mkdir data_for_yolo\n",
+        "# !mkdir data_for_yolo/data\n",
+        "# !mkdir data_for_yolo/data/images\n",
+        "# !mkdir data_for_yolo/data/labels\n",
+        "# !mkdir data_for_yolo/data/images/train\n",
+        "# !mkdir data_for_yolo/data/labels/train\n",
+        "# !mkdir data_for_yolo/data/images/test\n",
+        "# !mkdir data_for_yolo/data/labels/test"
+      ],
+      "metadata": {
+        "id": "3_9hIIDke1JN"
+      },
+      "execution_count": 7,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import yaml\n",
+        "\n",
+        "yaml_content = \"\"\"\n",
+        "train: data_for_yolo/data/images/train/\n",
+        "val: data_for_yolo/data/images/test/\n",
+        "\n",
+        "# number of classes\n",
+        "nc: 5\n",
+        "\n",
+        "# class names\n",
+        "names: ['human', 'head', 'face', 'car', 'carplate']\n",
+        "\"\"\"\n",
+        "\n",
+        "with open('data_for_yolo/dataset.yaml', 'w') as f_yml:\n",
+        "    yaml.dump(yaml_content, f_yml)"
+      ],
+      "metadata": {
+        "id": "JZFRItuEvM_5"
+      },
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# !mkdir data/train/yolo_labels"
+      ],
+      "metadata": {
+        "id": "IgKCxy54rh3d"
+      },
+      "execution_count": 9,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Сделаем разметку как в Yolo, после этого нужным образом перемешаем и\n",
+        "# закинем в папку data_for_yolo\n",
+        "name_to_class_num = {\n",
+        "    'human': 0,\n",
+        "    'head': 1,\n",
+        "    'face': 2,\n",
+        "    'car': 3,\n",
+        "    'carplate': 4\n",
+        "}\n",
+        "\n",
+        "for img_name in os.listdir('data/train/images'):\n",
+        "    print(img_name.split('.')[0])\n",
+        "    break"
+      ],
+      "metadata": {
+        "id": "E98XOhD6xVwU",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "10cde973-57b7-4972-ccf5-7af3534381b8"
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "25-11-2021_06-28-29_AM\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for img_name in os.listdir('data/train/images/'):\n",
+        "    img_name = img_name.split('.')[0]\n",
+        "    print(img_name)\n",
+        "    for f in os.listdir('data/train/labels/'):\n",
+        "        if f.startswith(img_name):\n",
+        "            print(f)\n",
+        "    break"
+      ],
+      "metadata": {
+        "id": "ijYN-W3dxVyT",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "7b3a6c78-63d4-4487-bb81-b4659ca71e2c"
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "25-11-2021_06-28-29_AM\n",
+            "25-11-2021_06-28-29_AM_human..txt\n",
+            "25-11-2021_06-28-29_AM_head..txt\n",
+            "25-11-2021_06-28-29_AM_face..txt\n",
+            "25-11-2021_06-28-29_AM_car..txt\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for img_name in os.listdir('data/train/images/'):\n",
+        "    img_name = img_name.split('.')[0]\n",
+        "    print(img_name)\n",
+        "    for f in os.listdir('data/train/labels/'):\n",
+        "        if f.startswith(img_name):\n",
+        "            print(f.split('.')[0].split('_')[-1])\n",
+        "            with open('data/train/labels/' + f, 'r') as f_old:\n",
+        "                print(f_old.readlines())\n",
+        "    break"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "QdVTB2fatlOp",
+        "outputId": "8a842099-7245-495d-d059-9c2124f2b6a8"
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "25-11-2021_06-28-29_AM\n",
+            "human\n",
+            "['0 0.5355512152777778 0.7598996913580247 0.08703124999999999 0.34498456790123466\\n', '0 0.6109288194444444 0.809579475308642 0.06459201388888886 0.2568132716049384\\n']\n",
+            "head\n",
+            "['0 0.6060763888888889 0.7109413580246914 0.027326388888888904 0.05478395061728395\\n', '0 0.5411002604166666 0.6192052469135803 0.02878038194444442 0.060462962962962975\\n']\n",
+            "face\n",
+            "['0 0.6046875 0.7285956790123457 0.017083333333333388 0.023487654320987695\\n', '0 0.5391970486111111 0.6480131172839506 0.018220486111111118 0.03158179012345675\\n']\n",
+            "car\n",
+            "['0 0.08944661458333333 0.24220679012345678 0.17889322916666667 0.2080246913580247\\n', '0 0.15489149305555555 0.0732716049382716 0.14311631944444445 0.11594135802469135\\n']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "old_path = 'data/train/labels/'\n",
+        "new_path = 'data/train/yolo_labels/'\n",
+        "\n",
+        "for img_name in os.listdir('data/train/images/'):\n",
+        "    img_name = img_name.split('.')[0]\n",
+        "    print(img_name)\n",
+        "    with open(new_path + img_name + '.txt', 'w') as f_new:\n",
+        "        for f in os.listdir(old_path):\n",
+        "            if f.startswith(img_name):\n",
+        "                with open(old_path + f, 'r') as f_old:\n",
+        "                    f_new.write(f_old.readlines())\n",
+        "    break"
+      ],
+      "metadata": {
+        "id": "7hUda11bsKYv"
+      },
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -459,7 +679,145 @@
         ""
       ],
       "metadata": {
-        "id": "e_zV-dEovfwk"
+        "id": "1qdk5k1ysKaj"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "2OKYkZ9WsKcc"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "TzCwZv0AsKeT"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "wcC0qEJyxV0d"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Model"
+      ],
+      "metadata": {
+        "id": "B5Opj1mPvNp_"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# !git clone https://github.com/ultralytics/yolov5.git\n",
+        "!pip install -r yolov5/requirements.txt"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0F18laexe1LL",
+        "outputId": "898c0576-2218-4eb6-e1ff-cff34d39ef0b"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Cloning into 'yolov5'...\n",
+            "remote: Enumerating objects: 12547, done.\u001b[K\n",
+            "remote: Counting objects: 100% (95/95), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (76/76), done.\u001b[K\n",
+            "remote: Total 12547 (delta 49), reused 42 (delta 19), pack-reused 12452\u001b[K\n",
+            "Receiving objects: 100% (12547/12547), 12.53 MiB | 3.82 MiB/s, done.\n",
+            "Resolving deltas: 100% (8584/8584), done.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# !python yolov5/train.py --freeze 10"
+      ],
+      "metadata": {
+        "id": "9K6PcPRUgJPb"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "djgo2fSngJRM"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "yaZ9zyiPgJTV"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "9ba5ccnhe1N6"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "IKP1Rib7e1PC"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "d47PsPrqe1RU"
       },
       "execution_count": null,
       "outputs": []
