Все данные подготовлены

--- a/H_Tatarstan2022_Yolov7x_Multi_data_preparing.ipynb
+++ b/H_Tatarstan2022_Yolov7x_Multi_data_preparing.ipynb
@@ -12,7 +12,7 @@
         "Y5zgDP-GRKR4"
       ],
       "mount_file_id": "1Slv1vvkMhymwAqn8nVU6atR9rSf1eu4j",
-      "authorship_tag": "ABX9TyPzQg4vjeYfwPSVVF2P3qJv",
+      "authorship_tag": "ABX9TyObLorSMMAbX7JR+ntQ1QfM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1627,13 +1627,13 @@
         "id": "Gup9092daN3g",
         "outputId": "3dc6580b-a4f7-444e-b6e0-5d6422ea854d"
       },
-      "execution_count": null,
+      "execution_count": 60,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            " 54%|█████▍    | 1025/1893 [04:43<03:53,  3.72it/s]"
+            "100%|██████████| 1893/1893 [08:10<00:00,  3.86it/s]\n"
           ]
         }
       ]
@@ -1644,10 +1644,25 @@
         "len(os.listdir('./data_for_yolo_car/data/images/train')), len(os.listdir('./data_for_yolo_car/data/images/test'))"
       ],
       "metadata": {
-        "id": "Ei9x3swEaN5v"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Ei9x3swEaN5v",
+        "outputId": "fa79ef47-15bb-4978-b9cf-57e9ea8e63c7"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 61,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(1419, 474)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 61
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -1655,10 +1670,34 @@
         "len(os.listdir('./data_for_yolo_car/data/labels/train')), len(os.listdir('./data_for_yolo_car/data/labels/test'))"
       ],
       "metadata": {
-        "id": "X9upCFFLaN7h"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "X9upCFFLaN7h",
+        "outputId": "2dcf7183-af38-428c-b569-f6866ac44cb6"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 62,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(1419, 474)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 62
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Данные подготовлены"
+      ],
+      "metadata": {
+        "id": "JK0j29VnyTem"
+      }
     }
   ]
 }
