--- a/H_Tatarstan2022_Final.ipynb
+++ b/H_Tatarstan2022_Final.ipynb
@@ -6,13 +6,9 @@
       "name": "H_Tatarstan2022_Final.ipynb",
       "provenance": [],
       "collapsed_sections": [
-        "synyZ9WcZU8_",
-        "Mb73RUdyauU5",
-        "vjIRGAFwbjl6",
-        "9QwjWry7eQgG",
-        "XbuzLrHafvOc"
+        "synyZ9WcZU8_"
       ],
-      "authorship_tag": "ABX9TyNUrPBKbw3UWU9qbRinNzLx",
+      "authorship_tag": "ABX9TyOrZk/h3n7PJQa+QlDzgWWZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -382,7 +378,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "В результате многочисленных экспериментов лучший результат показала модель с разрешением 832 (`batch_size` равен 6, так как бесплатная GPU от Google Colab'a не вмещает в себя больше).\n",
+        "В результате многочисленных экспериментов лучший результат показала модель с разрешением 1280 (`batch_size` равен 2, так как бесплатная GPU от Google Colab'a не вмещает в себя больше).\n",
         "\n",
         "Также возможно лучшее разрешение показало бы лучшие результаты, но в бесплатной версии обучение идет слишком долго и память слишком мала."
       ],
@@ -406,7 +402,7 @@
     {
       "cell_type": "code",
       "source": [
-        "!python ./yolov7/train.py --img 832 --batch 6 --epochs 100 --freeze 10 --data {path_to_data} --weights ./yolov7/yolov7x_training.pt --name yolov7x_general_832_results --cache"
+        "!python ./yolov7/train.py --img 1280 --batch 2 --epochs 35 --freeze 10 --data {path_to_data} --weights ./yolov7/yolov7x_training.pt --name yolov7x_general_1280_results --cache"
       ],
       "metadata": {
         "id": "amJj1NzlIDuA"
@@ -439,7 +435,7 @@
     {
       "cell_type": "code",
       "source": [
-        "!python3 ./yolov7/detect.py --weights ./runs/train/yolov7x_general_832_results/weights/best.pt --img 832 --conf 0.01 --source ./data_for_yolo/data/images/test --save-txt --save-conf"
+        "!python3 ./yolov7/detect.py --weights ./runs/train/yolov7x_general_1280_results/weights/best.pt --img 1280 --conf 0.01 --source ./data_for_yolo/data/images/test --save-txt --save-conf"
       ],
       "metadata": {
         "id": "e_GBucxXbxHL"
@@ -563,7 +559,7 @@
     {
       "cell_type": "code",
       "source": [
-        "!python3 ./yolov7/detect.py --weights ./runs/train/yolov7x_general_832_results/weights/best.pt --img 832 --conf 0.01 --source ./data/test/images --save-txt --save-conf"
+        "!python3 ./yolov7/detect.py --weights ./runs/train/yolov7x_general_1280_results/weights/best.pt --img 1280 --conf 0.01 --source ./data/test/images --save-txt --save-conf"
       ],
       "metadata": {
         "id": "7KJwNTeqePC8"
@@ -657,7 +653,7 @@
     {
       "cell_type": "code",
       "source": [
-        "solution_site_yolov7_df.to_csv(\"solutions/yolov7x_832_general_e163_conf01.csv\",\n",
+        "solution_site_yolov7_df.to_csv(\"./solutions/yolov7x_general_1280_results_conf01.csv\",\n",
         "                               sep=';', index=False)"
       ],
       "metadata": {
@@ -680,7 +676,7 @@
     {
       "cell_type": "code",
       "source": [
-        "path = \"./solutions/yolov7x_832_general_e163_conf01.csv\"\n",
+        "path = \"./solutions/yolov7x_general_1280_results_conf01.csv\"\n",
         "\n",
         "df = pd.read_csv(path, sep=';')\n",
         "df.head()"
